CB-31765 Refactor GCP Loadbalancer resource creation/build
Create phase:
- fetch resources from DB
- most of the resources are differentiated by LB type: a resource builder `create` method is invoked separately if multiple type of LB is created/updated
- then the resources are created usually for every healthcheck port (resource name always contains healtcheck port)
- forwarding rules also contains protocol, and created per protocol. If protocol is not in the name, it's expected to be TCP, as it was created before FreeIPA LB was supported
- If the resource is returned from DB, it is returned instead of creating new one
- attributes stored in the DB are extended with all the information which is used to create the resource itself, for future usage, so we do not need to depend on name

Build phase:
- logic is added to check resource existence on provider side by using resource name, and skip everything if exists
- except for backend service, where backends are updated for the backend service